# aptavach

./: .gitattributes  .gitignore  Claude.md  README.md  package.json
api/: .env.example  README.md  pyproject.toml
api/app/: __init__.py  config.py  main.py  schemas.py
api/app/providers/: __init__.py  embeddings.py  llm.py  vector_store.py
api/app/routes/: __init__.py  chat.py  documents.py  projects.py
api/app/services/: __init__.py  chat.py  documents.py  index.py  projects.py
web/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: app-sidebar.tsx  brand.tsx  help-dialog.tsx  markdown.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/components/chat/: chat-input.tsx  chat-panel.tsx  message.tsx
web/src/components/documents/: document-preview.tsx  document-sidebar.tsx  sources.tsx
web/src/components/sidebar/: chat-list.tsx  project-list.tsx  project-menu.tsx  sidebar-rail.tsx
web/src/hooks/: useChat.ts  useChats.ts  useDocuments.ts  useProjects.ts
web/src/lib/: chat-store.ts  types.ts
web/src/lib/api/: client.ts  config.ts  index.ts  types.ts
